package br.unitins.topicos1.model;

public class CupomDesconto {
    
}
