@startuml Bombonica

    title Ecommerce Bombonica - UML

    class Produto {
        - id: Long
        - nome: String
        - descricao: String
        - preco: Double
        - estoque: Integer
    }

    class BarraChocolate {
        - tipoDeChocolate: TipoDeChocolate
        - peso: Double
        - ingredientes: String
    }

    enum TipoChocolate {
        AO_LEITE,
        AMARGO,
        BRANCO,
        MEIO_AMARGO,
    }

    class Usuario {
        - id: Long
        - nome: String
        - email: String
        - senha: String
        - cpf: String
    }

    class Telefone {
        - id: Long
        - codigoArea: String
        - numero: String
    }

    class Compra {
        - id: Long
        - data: Date
    }

    class ItemCompra {
        - id: Long
        - quantidade: Integer
        - preco: Double
    }

    class Endereco {
        - id: Long
        - principal: Boolean
        - logradouro: String
        - bairro: String
        - numero: String
        - complemento: String
        - cep: String
        - Municipio: String
        - Estado: String 
    }

    class Municipio{
        - nomeMunicipio: String
    }

    class Estado {
        - nomeEstado: String
    }

    class TipoPromocao {
        - id: Long
        - descricao: String
    }

    class Promocao {
        - id: Long
        - descricao: String
        - desconto: Double
    }

    class CupomDesconto {
        - id: Long
        - codigo: String
        - valor: Double
    }

    Produto <|-- BarraChocolate

    TipoChocolate "1" --> "*" BarraChocolate

    Usuario "*" --> "*" Produto: listaDesejo
    Usuario "1" *--> "1" Telefone: celular
    Usuario "1" *--> "1" Telefone: whatsapp
    Usuario "1" *--> "*" Endereco

    Municipio "1" *--> "1" Endereco  
    Municipio "*" *--> "1" Estado

    Compra "1" *--> "*" ItemCompra
    Compra "*" --> "1" Usuario
    Compra "*" --> "1" Endereco

    ItemCompra "*" --> "1" Produto
   
    Promocao "1" *--> "*" Produto
    Promocao "*" --> "1" CupomDesconto
    Promocao "*" --> "1" TipoPromocao

@enduml
